--- a/front-end/catalog/src/app/components/categories/categories.component.html
+++ b/front-end/catalog/src/app/components/categories/categories.component.html
@@ -1,1 +1,35 @@
-<p>categories works!</p>
+<h2>Cathegories</h2>
+<br/>
+<div class="d-flex justify-content-center">
+	<a class="bg-success rounded p-2 pl-3 pr-3 create-button" 
+		[hasRoles]="[roles.ADMIN]" routerLink="/categories/create">
+		Create Category
+	</a>
+</div>
+<br/>
+<div class="border border-secondary rounded p-2">
+	<table class="table table-hover">
+		<thead>
+			<tr class="text-center">
+				<th scope="col">Name</th>
+				<th scope="col">Options</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr *ngFor="let category of categories">
+				<td>{{category.name}}</td>
+				<td class="d-flex justify-content-around">
+					<div class="bg-success rounded p-1 pl-2 pr-2">
+						<i class="fas fa-arrow-right"></i>
+					</div>
+					<div [hasRoles]="[roles.ADMIN]" class="bg-primary rounded p-1 pl-2 pr-2">
+						<i class="fas fa-wrench"></i>
+					</div>
+					<div [hasRoles]="[roles.ADMIN]" (click)="deleteCategory(category)" class="bg-danger rounded p-1 pl-2 pr-2">
+						<i class="fas fa-trash"></i>
+					</div>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
