--- a/front-end/catalog/src/app/components/login/login.component.html
+++ b/front-end/catalog/src/app/components/login/login.component.html
@@ -1,20 +1,25 @@
-<h2>Login</h2>
-<form [formGroup]="loginForm" (ngSubmit)="submit()">
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" formControlName="username" class="form-control"/>
-        <div *ngIf="usernameControl.dirty && usernameControl.errors" class="invalid-feedback">
-            <div *ngIf="usernameControl.errors.required">Username is required</div>
-        </div>
+<div class="row">
+    <div class="col-6 offset-3">
+        <h2>Login</h2>
+        <form [formGroup]="loginForm" (ngSubmit)="submit()">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" formControlName="username" class="form-control"/>
+                <div *ngIf="usernameControl.dirty && usernameControl.errors" class="invalid-feedback">
+                    <div *ngIf="usernameControl.errors.required">Username is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" formControlName="password" class="form-control"/>
+                <div *ngIf="passwordControl.dirty && passwordControl.errors" class="invalid-feedback">
+                    <div *ngIf="passwordControl.errors.required">Password is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary">Login</button>
+            </div>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" class="form-control"/>
-        <div *ngIf="passwordControl.dirty && passwordControl.errors" class="invalid-feedback">
-            <div *ngIf="passwordControl.errors.required">Password is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <button class="btn btn-primary">Login</button>
-    </div>
-</form>
+</div>
+
