--- a/front-end/catalog/src/styles.css
+++ b/front-end/catalog/src/styles.css
@@ -1,1 +1,21 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+
+a:hover {
+	cursor: pointer;
+}
+
+td > div {
+	cursor: pointer;
+}
+
+.create-button {
+	display: block;
+	font-size: 18px;
+	color: white;
+}
+
+.create-button:hover {
+	color: white;
+	text-decoration: none;
+}
