--- a/front-end/catalog/src/app/components/products/products.component.html
+++ b/front-end/catalog/src/app/components/products/products.component.html
@@ -1,1 +1,41 @@
-<p>products works!</p>
+<h2>Products</h2>
+<br/>
+<div *ngIf="category">
+	<h3>Category: {{category?.name}}</h3>
+	<br/>
+	<div class="d-flex justify-content-center">
+		<a class="bg-success rounded p-2 pl-3 pr-3 create-button" 
+			[hasRoles]="[roles.ADMIN]" [routerLink]="'/categories/' + category?.id + '/products/create'">
+			Create Product
+		</a>
+	</div>
+	<br/>
+</div>
+<div class="border border-secondary rounded p-2">
+	<table class="table table-hover">
+		<thead>
+			<tr class="text-center">
+				<th scope="col">Name</th>
+				<th scope="col">Price</th>
+				<th scope="col">Options</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr *ngFor="let product of products">
+				<td>{{product.name}}</td>
+				<td>{{product.price}}</td>
+				<td class="d-flex justify-content-around">
+					<div class="bg-success rounded p-1 pl-2 pr-2" *ngIf="product.imageCode" (click)="showProductImage(product)">
+						<i class="fas fa-image"></i>
+					</div>
+					<div [hasRoles]="[roles.ADMIN]" class="bg-primary rounded p-1 pl-2 pr-2">
+						<i class="fas fa-wrench"></i>
+					</div>
+					<div [hasRoles]="[roles.ADMIN]" (click)="deleteProduct(product)" class="bg-danger rounded p-1 pl-2 pr-2">
+						<i class="fas fa-trash"></i>
+					</div>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
