--- a/front-end/catalog/src/app/components/create-product/create-product.component.html
+++ b/front-end/catalog/src/app/components/create-product/create-product.component.html
@@ -1,1 +1,35 @@
-<p>create-product works!</p>
+<div class="row">
+    <div class="col-6 offset-3">
+		<h2 *ngIf="category">Category: {{category.name}}</h2>
+        <h2>Create Product</h2>
+        <form [formGroup]="form" (ngSubmit)="submit()">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" formControlName="name" class="form-control"/>
+                <div class="error" [hidden]="!(form.controls.name.dirty && form.controls.name.errors)">
+					<div [hidden]="!form.controls.name.errors?.required">Name is required</div>
+					<div [hidden]="!form.controls.name.errors?.maxlength">Name cannot be longer than 20 symbols</div>
+				</div>
+			</div>
+			<div class="form-group">
+                <label for="price">Price</label>
+                <input type="number" formControlName="price" class="form-control"/>
+                <div class="error" [hidden]="!(form.controls.price.dirty && form.controls.price.errors)">
+					<div [hidden]="!form.controls.price.errors?.required">Price is required</div>
+					<div [hidden]="!form.controls.price.errors?.min">Minimum price is 0.01</div>
+					<div [hidden]="!form.controls.price.errors?.pattern">Max whole number length is 7 and max decimal part length is 2</div>
+				</div>
+			</div>
+			<div class="form-group">
+                <label for="image">Image</label><br/>
+                <input type="file" formControlName="image" accept="image/jpeg, image/png, image/webp"/>
+                <div class="error" [hidden]="!(form.controls.image.dirty && form.controls.image.errors)">
+					<div [hidden]="!form.controls.image.errors?.type">Invalid file type</div>
+				</div>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary">Create</button>
+            </div>
+        </form>
+    </div>
+</div>
