--- a/front-end/catalog/src/app/components/edit-category/edit-category.component.html
+++ b/front-end/catalog/src/app/components/edit-category/edit-category.component.html
@@ -1,1 +1,18 @@
-<p>edit-category works!</p>
+<div class="row">
+    <div class="col-6 offset-3">
+        <h2>Edit Category</h2>
+        <form [formGroup]="form" (ngSubmit)="submit()">
+            <div class="form-group">
+                <label for="username">Name</label>
+                <input type="text" formControlName="name" class="form-control"/>
+                <div [hidden]="!(nameControl.dirty && nameControl.errors)" class="error">
+					<div [hidden]="!nameControl.errors?.required">Name is required</div>
+					<div [hidden]="!nameControl.errors?.maxlength">Name cannot be longer than 20 symbols</div>
+				</div>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary">Edit</button>
+            </div>
+        </form>
+    </div>
+</div>
