--- a/front-end/catalog/src/app/components/login/login.component.html
+++ b/front-end/catalog/src/app/components/login/login.component.html
@@ -5,15 +5,15 @@
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" formControlName="username" class="form-control"/>
-                <div *ngIf="usernameControl.dirty && usernameControl.errors" class="invalid-feedback">
-                    <div *ngIf="usernameControl.errors.required">Username is required</div>
+                <div [hidden]="!(usernameControl.dirty && usernameControl.errors)">
+                    <div [hidden]="!usernameControl.errors?.required">Username is required</div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" formControlName="password" class="form-control"/>
-                <div *ngIf="passwordControl.dirty && passwordControl.errors" class="invalid-feedback">
-                    <div *ngIf="passwordControl.errors.required">Password is required</div>
+                <div [hidden]="!(passwordControl.dirty && passwordControl.errors)">
+                    <div [hidden]="!passwordControl.errors?.required">Password is required</div>
                 </div>
             </div>
             <div class="form-group">
@@ -22,4 +22,3 @@
         </form>
     </div>
 </div>
-
